--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase-admin": "^7.2.0",
     "prismic-javascript": "^2.0.3",
     "prismic-reactjs": "^0.3.2",
     "react": "^16.8.4",
